updated shipping as well as google sing up system added

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -84,5 +84,6 @@
      border-radius: 5px;
      font-size: 17px;
      color: #2A414F;
-     font-family: 'Lato'
+     font-family: 'Lato';
+     cursor: pointer;
 }
